force-app/main/default/objects/apxio__Course__c/apxio__Course__c.object-meta.xml
<CustomObject>
    <description>A course or class that may be offered at any of the space campuses</description>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>