force-app/main/default/objects/apxio__Course__c/fields/apxio__Active__c.field-meta.xml
<CustomField>
    <fullName>apxio__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>