force-app/main/default/objects/apxio__Course__c/fields/apxio__Course_Details__c.field-meta.xml
<CustomField>
    <fullName>apxio__Course_Details__c</fullName>
    <description>Details of the course content including materials covered</description>
    <label>Course Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>