force-app/main/default/objects/apxio__Course__c/fields/apxio__Credits__c.field-meta.xml
<CustomField>
    <fullName>apxio__Credits__c</fullName>
    <description>Credit hours earned by completing this course</description>
    <label>Credits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>